Add spring-cloud-cli with openjdk8.